// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance accent 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
  </div>
</div>
`;

exports[`Storyshots appearance basic 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
  </div>
</div>
`;

exports[`Storyshots onClose accent 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-ca4yqr=""
  >
    <button
      aria-label="Close tooltip"
      data-css-1oqz9a6=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </button>
    Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
  </div>
</div>
`;

exports[`Storyshots onClose basic 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-12mtufz=""
  >
    <button
      aria-label="Close tooltip"
      data-css-1s4vcbp=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </button>
    Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
  </div>
</div>
`;

exports[`Storyshots onClose short text 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-12mtufz=""
  >
    <button
      aria-label="Close tooltip"
      data-css-1s4vcbp=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </button>
    Short
  </div>
</div>
`;

exports[`Storyshots onClose tailPosition topRight 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-12mtufz=""
  >
    <button
      aria-label="Close tooltip"
      data-css-1s4vcbp=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </button>
    Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    <div
      aria-hidden={true}
      data-css-pnrenl=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-1imdnud=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomLeft 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-vahegc=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomRight 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-6srp9d=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent leftCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-d2qnna=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent rightCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-1trbt5v=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-pssukq=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topLeft 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-1u7h16=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topRight 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-1xfwfkk=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-16npbbe=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-s1sch4=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomLeft 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-1jxkkwb=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomRight 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-as9lde=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic leftCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-1bzlzco=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic rightCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-1lnrdce=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topCenter 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-161cv40=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topLeft 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-1oan5ap=""
    />
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topRight 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div
    data-css-2fmxat=""
  >
    Some text
    <div
      aria-hidden={true}
      data-css-pnrenl=""
    />
  </div>
</div>
`;
